--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"
         type="text/css">
@@ -16,25 +16,128 @@
 <body>
     <header>
         <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill" href="#"><div class="small-logo"><i class="fas fa-dumbbell"></i> SAFEGYM</div>
+            <a class="flex-sm-fill" href="/">
+                <div class="small-logo"><i class="fas fa-dumbbell"></i> SAFEGYM</div>
             </a>
-            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="#">Home</a>
+
+            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="/">Home</a>
             <a class="flex-sm-fill text-sm-center nav-link" href="#">Plans</a>
             <a class="flex-sm-fill text-sm-center nav-link" href="#">Contact</a>
             <!--<a class="flex-sm-fill text-sm-center nav-link disabled" href="#" tabindex="-1"
                 aria-disabled="true">Disabled</a>-->
         </nav>
 
-
         <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
         <div class="central-logo">Stay<span> Safe </span>Gym</div>
+
+        <div class="container">
+
+            <div id="carouselCenter" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/gym-center-img.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselCenter" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselCenter" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
+            </div>
+
+        </div>
+
+
+
+
     </header>
     <section>
 
     </section>
     <footer>
-
+        <div id="footer-details" class="row">
+            <div class="col-sm-12">
+                <ul class="list-inline covid-measures">
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <div class="covid">
+                                <i class="fas fa-head-side-mask" aria-hidden="true"></i>
+                                <span class="sr-only">Check your temperature</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <div class="covid">
+                                <i class="fas fa-temperature-low" aria-hidden="true"></i>
+                                <span class="sr-only">Check your temperature</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <div class="covid">
+                                <i class="fas fa-hands-wash" aria-hidden="true"></i>
+                                <span class="sr-only">Wash Your Hands</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <div class="covid">
+                                <i class="fas fa-people-arrows" aria-hidden="true"></i>
+                                <span class="sr-only">Social Distancing</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" target="_blank">
+                            <i class="fab fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
