--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <header>
-        <nav class="nav nav-pills flex-column flex-sm-row">
+        <!-- Old Navbar
+            <nav class="nav nav-pills flex-column flex-sm-row">
             <a class="flex-sm-fill" href="/">
                 <div class="small-logo"><i class="fas fa-dumbbell"></i> SAFEGYM</div>
             </a>
@@ -24,21 +25,48 @@
             <a class="flex-sm-fill text-sm-center nav-link" href="#">Plans</a>
             <a class="flex-sm-fill text-sm-center nav-link" href="#">Contact</a>
             <!--<a class="flex-sm-fill text-sm-center nav-link disabled" href="#" tabindex="-1"
-                aria-disabled="true">Disabled</a>-->
+                aria-disabled="true">Disabled</a>-- >
+        </nav>
+        -->
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand flex-sm-fill" href="/"> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Plans</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
-        <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
-        <div class="central-logo">Stay<span> Safe </span>Gym</div>
+        <div class="container-sm">
+            <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
+            <div class="central-logo">Stay<span> Safe </span>Gym</div>
+        </div>
 
-        <div class="container">
-
+        <div class="container-sm">
             <div id="carouselCenter" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100"
+                            alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/images/matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100"
+                            alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="assets/images/gym-center-img.jpg" class="d-block w-100" alt="...">
@@ -53,74 +81,79 @@
                     <span class="visually-hidden">Next</span>
                 </a>
             </div>
-
         </div>
-
-
-
 
     </header>
     <section>
-
+        <ul class="list-inline covid-measures">
+            <li class="list-inline-item">
+                <div class="container">
+                    <i class="fas fa-head-side-mask" aria-hidden="true"></i>
+                    <!--<a href="#" target="_blank">
+                    <div class="covid">
+                        <i class="fas fa-head-side-mask" aria-hidden="true"></i>
+                        <span class="sr-only">Check your temperature</span>
+                    </div>
+                </a> -->
+                </div>
+            </li>
+            <li class="list-inline-item">
+                <a href="#" target="_blank">
+                    <div class="covid">
+                        <i class="fas fa-temperature-low" aria-hidden="true"></i>
+                        <span class="sr-only">Check your temperature</span>
+                    </div>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="#" target="_blank">
+                    <div class="covid">
+                        <i class="fas fa-hands-wash" aria-hidden="true"></i>
+                        <span class="sr-only">Wash Your Hands</span>
+                    </div>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="#" target="_blank">
+                    <div class="covid">
+                        <i class="fas fa-people-arrows" aria-hidden="true"></i>
+                        <span class="sr-only">Social Distancing</span>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </section>
     <footer>
+        
         <div id="footer-details" class="row">
+            <div class="inline small-logo">
+                
+            </div>
             <div class="col-sm-12">
-                <ul class="list-inline covid-measures">
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <div class="covid">
-                                <i class="fas fa-head-side-mask" aria-hidden="true"></i>
-                                <span class="sr-only">Check your temperature</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <div class="covid">
-                                <i class="fas fa-temperature-low" aria-hidden="true"></i>
-                                <span class="sr-only">Check your temperature</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <div class="covid">
-                                <i class="fas fa-hands-wash" aria-hidden="true"></i>
-                                <span class="sr-only">Wash Your Hands</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <div class="covid">
-                                <i class="fas fa-people-arrows" aria-hidden="true"></i>
-                                <span class="sr-only">Social Distancing</span>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
                 <ul class="list-inline social-links">
+                    <li class="list-inline-item small-logo">
+                        <i class="fas fa-dumbbell"></i> #SAFEGYM
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.facebook.com/" target="_blank">
                             <i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://twitter.com/" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/" target="_blank">
                             <i class="fab fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
