add plan option index

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <div id="carouselCenter" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/jonathan-borba-zfPOelmDc-M-unsplash768x512.jpg" class="d-block w-100"
+                        <img src="assets/images/Old_jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100"
                             alt="Holding bars">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/matthew-sichkaruk-3qZt1MwF4Zo-unsplash768x512.jpg" class="d-block w-100"
+                        <img src="assets/images/Old_matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100"
                             alt="Woman wearing mask squat">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Gym-56750-pixahive-768x512.jpg" class="d-block w-100" alt="Gym picture">
+                        <img src="assets/images/Old_gym-center-img.jpg" class="d-block w-100" alt="Gym picture">
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Monthly Plan</h5>
-                            <p class="card-text">- No Contract
-                            </p>
+                            <p class="card-text">- No Contract</p>
+                            <p class="card-text">- Joining Fee: $20.00</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <a href="/plans.html" class="btn btn-warning"> + More...</a>
                             </div>
@@ -84,6 +84,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Annual Plan</h5>
                             <p class="card-text">- 12 Months Contract</p>
+                            <p class="card-text risk">- Joining Fee: $20.00</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <a href="/plans.html" class="btn btn-warning ">+ More...</a>
                             </div>
