fix hrefpages and readme

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link active" aria-current="page" href="safe-gym/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/plans.html">Plans</a>
+                            <a class="nav-link" href="plans.html">Plans</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                             <p class="card-text">- No Contract</p>
                             <p class="card-text">- Joining Fee: $20.00</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <a href="/plans.html" class="btn btn-warning"> + More...</a>
+                                <a href="plans.html" class="btn btn-warning"> + More...</a>
                             </div>
                             <span class="sr-only">Monthly Plan</span>
                         </div>
@@ -86,7 +86,7 @@
                             <p class="card-text">- 12 Months Contract</p>
                             <p class="card-text risk">- Joining Fee: $20.00</p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <a href="/plans.html" class="btn btn-warning ">+ More...</a>
+                                <a href="plans.html" class="btn btn-warning ">+ More...</a>
                             </div>
 
                             <span class="sr-only">Annual Plan</span>
