--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
+                            <a class="nav-link" href="/safe-gym/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/plans.html">Plans</a>
+                            <a class="nav-link" href="plans.html">Plans</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/contact.html">Contact</a>
+                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
