--- a/plans.html
+++ b/plans.html
@@ -28,10 +28,10 @@
                             <a class="nav-link" href="/safe-gym/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="plans.html">Plans</a>
+                            <a class="nav-link active" aria-current="page" href="/safe-gym/plans.html">Plans</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="/safe-gym/contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
