small adjustments price year and ident styles

--- a/plans.html
+++ b/plans.html
@@ -76,8 +76,8 @@
                                 <li class="list-group-item">Free Extra Classes</li>
                                 <li class="list-group-item join-fee risk">Joining Fee: $20.00</li>
                             </ul>
-                            <p class="card-text card-price bg-warning text-center">$500,00 p/a*</p>
-                            <p class="card-text text-end">*p/a: Per Annum</p>
+                            <p class="card-text card-price bg-warning text-center">$500,00 p/y*</p>
+                            <p class="card-text text-end">*p/y: Per Year</p>
                             <span class="sr-only">Annual Plan</span>
                         </div>
                     </div>
