style and index.html plans adjustment

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Monthly Plan</h5>
-                            <p class="card-text">- No Contract</p>
-                            <p class="card-text">- Joining Fee: $20.00</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">No Contract</li>
+                                <li class="list-group-item join-fee">Joining Fee: $20.00</li>
+                            </ul>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <a href="plans.html" class="btn btn-warning"> + More...</a>
                             </div>
@@ -83,8 +85,10 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Annual Plan</h5>
-                            <p class="card-text">- 12 Months Contract</p>
-                            <p class="card-text risk">- Joining Fee: $20.00</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">No Contract</li>
+                                <li class="list-group-item join-fee risk">Joining Fee: $20.00</li>
+                            </ul>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <a href="plans.html" class="btn btn-warning ">+ More...</a>
                             </div>
