Code Fix, adjustments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+        <!--Navbar - Bootstrap-->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand flex-sm-fill font-m" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
@@ -37,7 +38,7 @@
                 </div>
             </div>
         </nav>
-
+         
         <div class="container-fluid central-logo font-m">
             <div class="central-logo-icon font-xxxl"><i class="fas fa-dumbbell"></i></div>
             <div class="central-logo">Stay<span class="font-xxxl"> Safe </span>Gym</div>
@@ -45,7 +46,7 @@
     </header>
 
     <section class="container-fluid">
-
+        <!--Carousel - Bootstrap -->
         <div class="carousel">
             <div id="carousel-center" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -63,7 +64,7 @@
                 </div>
             </div>
         </div>
-
+        <!--Cards - Bootstrap -->
         <div class="container-fluid cards price">
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-md-4 mt-1">
@@ -99,7 +100,7 @@
                 </div>
             </div>
         </div>
-
+        <!--Cards - Bootstrap -->
         <div class="container-fluid cards covid-measures">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 g-4">
                 <div class="col-sm-3">
@@ -145,7 +146,7 @@
 
     <footer class="container-fluid">
         <div id="footer-details" class="row footer-details font-l">
-            <div class="col-sm-12 col-md-4 about font-xs">
+            <div class="col-sm-12 col-md-4 opening-hours font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
@@ -159,7 +160,7 @@
                     </li>
                 </ul>
             </div>
-
+            <!--social-links - resume-project -->
             <div class="col-sm-12 col-md-4 text-center social">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
