--- a/plans.html
+++ b/plans.html
@@ -10,11 +10,12 @@
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"
         type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>SafeGin</title>
+    <title>SafeGym</title>
 </head>
 
 <body>
     <header>
+        <!--Navbar - Bootstrap-->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand flex-sm-fill font-m" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
@@ -45,7 +46,7 @@
     </header>
 
     <section class="container-fluid">
-
+        <!--Cards - Bootstrap-->
         <div class="container cards">
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-md-4 mt-4">
@@ -68,6 +69,7 @@
                 <div class="col-sm-6 col-md-4 mt-4">
                     <div class="card price">
                         <div class="card-body">
+                            <!--Badge - Bootstrap - Extract from Markuptag-->
                             <span class="badge position-absolute top-0 left-100 translate-middle bg-warning">Best
                                 option</span>
                             <h5 class="card-title card-plan">Annual Plan</h5>
@@ -86,7 +88,7 @@
                 </div>
             </div>
         </div>
-
+        <!--Cards - Bootstrap-->
         <div class="container-fluid cards covid-measures">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 g-4">
                 <div class="col-sm-3">
@@ -132,7 +134,7 @@
 
     <footer class="container-fluid">
         <div id="footer-details" class="row footer-details font-l">
-            <div class="col-sm-12 col-md-4 about font-xs">
+            <div class="col-sm-12 col-md-4 opening-hours font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
@@ -146,7 +148,7 @@
                     </li>
                 </ul>
             </div>
-
+            <!--social-links - resume-project -->
             <div class="col-sm-12 col-md-4 text-center social">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
