--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,15 @@
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"
         type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>SafeGin</title>
+    <title>SafeGym</title>
 </head>
 
 <body>
     <header>
+        <!--Navbar - Bootstrap-->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand flex-sm-fill" href="/safe-gym/"> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
+                <a class="navbar-brand flex-sm-fill font-m" href="/safe-gym/"> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,7 +46,7 @@
     </header>
 
     <section class="container-fluid">
-
+        <!--contact-form - resume-project -->
         <div class="container-sm contact-form">
             <div class="row bg-color-contact">
                 <div class="col">
@@ -76,7 +77,7 @@
             <p>SafeGyn</p>
             <p>XXI, Jamestown Park Road, Dublin 35</p>
             <p>Dublin Co. Dublin, Ireland</p>
-            <p>Phone: +353 1 89 57 60 00</p>
+            <p>Phone: <a href="Tel: 00353189576000">+353 1 89 57 60 00</a></p>
         </div>
 
         <div class="container-fluid cards covid-measures">
@@ -124,7 +125,7 @@
 
     <footer class="container-fluid">
         <div id="footer-details" class="row footer-details font-l">
-            <div class="col-sm-12 col-md-4 about font-xs">
+            <div class="col-sm-12 col-md-4 opening-hours font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
@@ -138,7 +139,7 @@
                     </li>
                 </ul>
             </div>
-
+            <!--social-links - resume-project -->
             <div class="col-sm-12 col-md-4 text-center social">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
