--- a/plans.html
+++ b/plans.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="">Home</a>
+                            <a class="nav-link" aria-current="page" href="/safe-gym/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="plans.html">Plans</a>
