--- a/plans.html
+++ b/plans.html
@@ -18,7 +18,7 @@
         <!--Navbar - Bootstrap-->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand flex-sm-fill font-m" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
+                <a class="navbar-brand flex-sm-fill font-m" href="/safe-gym/"> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
